--- a/www/txat/styles/txatgray-styles.css
+++ b/www/txat/styles/txatgray-styles.css
@@ -153,6 +153,12 @@ div.input input {
 	padding: 8px;
 }
 
+div.popup.help dl {
+	max-height: 320px;
+	overflow-y: scroll;
+	overflow-x: hidden;
+}
+
 div.popup .close {
 	font-size: 200%;
 	cursor: pointer;
@@ -233,6 +239,8 @@ div.popup div.title {
 #logoWindow div.loginFields div.cbPassw {
 	vertical-align: bottom;
 }
+
+
 
 /*
 #iconZone {
