--- a/www/txat/scripts/Txat/addons/sound/sound.css
+++ b/www/txat/scripts/Txat/addons/sound/sound.css
@@ -1,8 +1,6 @@
 .soundPopup .content label {
 	display: inline-block;
-/*
-	width:150px;
-*/
+	width: 200px;
 }
 .submitPopup {
 	position: absolute;
@@ -14,4 +12,7 @@
 	font-size: 20px;
 	line-height: 17px;
 	padding: 0px;
+}
+.otherController {
+	margin-left: 10px;
 }
